# vid-color-filter

./: README.md  pyproject.toml  run.py
.claude/: settings.local.json
docs/plans/: 2026-03-10-video-color-diff-filter-design.md  2026-03-10-video-color-diff-filter-plan.md
docs/superpowers/plans/: 2026-03-15-temporal-scielab-implementation.md  2026-03-30-calibration-experiment.md
docs/superpowers/specs/: 2026-03-15-temporal-scielab-video-color-diff-design-zh.md  2026-03-15-temporal-scielab-video-color-diff-design.md  2026-03-30-calibration-experiment-design.md
src/vid_color_filter/: calibration.py  cli.py  color_diff.py  distributed.py  frame_sampler.py  mask_generator.py  report.py  scorer.py
src/vid_color_filter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vid_color_filter/gpu/: adaptive_mask.py  batch_scorer.py  color_metrics.py  color_space.py  mask_generator.py  scielab.py  temporal_aggregator.py  visualizer.py
tests/: test_adaptive_mask.py  test_calibration.py  test_calibration_cli.py  test_calibration_e2e.py  test_cli.py  test_color_diff.py  test_frame_sampler.py  test_gpu_color_metrics.py  test_gpu_scorer.py  test_mask_generator.py  test_report.py  test_scielab.py  test_scorer.py  test_temporal_aggregator.py  test_visualizer.py
