[project]
name = "vid-color-filter"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "scikit-image>=0.21",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
vid-color-filter = "vid_color_filter.cli:main"
